# pharmacies-saas2

./: .env  Dockerfile  admin_urls.py  admin_views.py  backup.sql  backup_before_fix.sql  backup_pharmacies_db.backup  docker-compose.yml  localhost+2-key.pem  localhost+2.pem  package-lock.json  populate_orders.py  requirements.txt  seed_full_system.py  test_customer_marketplace.sh  urls.py
backend/: .env  RegisterForm.jsx  dev.sh  manage.py  performance_test.py  pharmacies_db_backup.dump  pharmacies_db_backup_2026-03-20.dump  pyproject.toml  requirements.txt  urls.py
backend/api/: urls.py  views.py
backend/apps/: services.py
backend/apps/api/: urls.py
backend/apps/consumers/: admin.py  models.py
backend/apps/deliveries/: admin.py  serializers.py  services.py
backend/apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/payments/: models.py  services.py  urls.py  views.py
backend/apps/pharmacies/: urls.py  views.py
backend/apps/products/: admin.py  models.py  tasks.py  (+3 more)
backend/backend/: urls.py
backend/config/: asgi.py  manage.py  settings.py  urls.py
backend/core/: decorators.py  permissions.py  rbac.py  settings.py  urls.py  utils.py
backend/frontend/: package-lock.json  package.json  vite.config.js
backend/orders/: permissions.py  views.py
backend/pharmacy/: services.py  views.py
backend/platform_config_app/: admin.py  apps.py  models.py
backend/platform_settings/: apps.py
backend/staticfiles/: staticfiles.json
backend/users/: apps.py  models.py  serializers.py  views.py
backend/venv_prod/: pyvenv.cfg
(+172 files in other folders)
